necessary Updates Made

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
     <header>
         {% include "header.html" %}
     </header>
+    {% include 'flash_messages.html' %}
     <main>
         <div class="container">
             {% block main %}{% endblock %}
